# haytex

./: .gitignore  README.md  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/haytex/: report.py
tests/: test_report.py
