
[metadata]
name = haytex
description = 
author = 
license = 
license_file = LICENSE
platforms = 
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = 
	haytex
#install_requires = 
python_requires >= 3.6
package_dir = 
	=src
zip_safe = no

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
haytex = py.typed

[flake8]
max-line-length = 80
